# cvrtgi

./: CMakeLists.txt  README.md
include/: commonnamespace.h  headers.h
include/atomiccounter/: atomiccounter.h
include/buffer/: buffer.h  buffermanager.h
include/camera/: camera.h  cameramanager.h
include/core/: coreenum.h  coremanager.h  eventsignalslot.h  gpupipeline.h  input.h  instance.h  logicaldevice.h  physicaldevice.h  surface.h  swapchain.h
include/framebuffer/: framebuffer.h  framebuffermanager.h
include/geometry/: bbox.h  triangle2d.h  triangle3d.h
include/material/: exposedstructfield.h  material.h  materialantialiasing.h  materialbufferprefixsum.h  materialbuildvoxelshadowmapgeometry.h  materialcameravisiblevoxel.h  materialclusterization.h  materialclusterizationaddup.h  materialclusterizationbuildfinalbuffer.h  materialclusterizationcomputeaabb.h  materialclusterizationcomputeneighbour.h  materialclusterizationinitaabb.h  materialclusterizationinitvoxeldistance.h  materialclusterizationmergeclusters.h  materialclusterizationnewcenter.h  materialclusterizationprepare.h  materialclustervisibility.h  materialcolortexture.h  materialcomputefrustumculling.h  materialdistanceshadowmapping.h  materialenum.h  materialindirectcolortexture.h  materiallightbouncevoxelgaussianfilter.h  materiallightbouncevoxelgaussianfiltersecond.h  materiallightbouncevoxelirradiance.h  materiallighting.h  materiallitcluster.h  materiallitclusterprocessresults.h  materialmanager.h  materialprefixsum.h  materialresetclusterirradiancedata.h  materialscenevoxelization.h  materialshadowmappingvoxel.h  materialvoxelfacepenalty.h  materialvoxelrasterinscenario.h
include/math/: transform.h
include/model/: model.h
include/node/: emitternode.h  node.h
include/parameter/: attributedata.h  attributedefines.h  multitypebase.h  multitypeimplementation.h  multitypeunorderedmap.h
include/pipeline/: pipeline.h  pipelinedata.h
include/rastertechnique/: antialiasingtechnique.h  bufferprefixsumtechnique.h  bufferprocesstechnique.h  buildvoxelshadowmapgeometrytechnique.h  cameravisiblevoxeltechnique.h  clusterizationbuildfinalbuffertechnique.h  clusterizationcomputeaabbtechnique.h  clusterizationcomputeneighbourtechnique.h  clusterizationinitaabbtechnique.h  clusterizationmergeclustertechnique.h  clusterizationpreparetechnique.h  clusterizationtechnique.h  clustervisibilitytechnique.h  clustervisibleprefixsumtechnique.h  computefrustumcullingtechnique.h  distanceshadowmappingtechnique.h  lightbouncevoxelirradiancetechnique.h  litclustertechnique.h  rastertechnique.h  rastertechniqueenum.h  rastertechniquefactory.h  rastertechniquemanager.h  sceneindirectdrawtechnique.h  scenelightingtechnique.h  scenerastercolortexturetechnique.h  scenevoxelizationtechnique.h  shadowmappingvoxeltechnique.h  voxelfacepenaltytechnique.h  voxelrasterinscenariotechnique.h
include/renderpass/: renderpass.h  renderpassmanager.h
include/scene/: scene.h
include/shader/: atomiccounterunit.h  image.h  pushconstant.h  resourceenum.h  sampler.h  shader.h  shadermanager.h  shaderreflection.h  shaderstoragebuffer.h  shaderstruct.h  uniform.h  uniformBase.h
include/texture/: irradiancetexture.h  texture.h  textureinfo.h  texturemanager.h
include/uniformbuffer/: cpubuffer.h  uniformbuffer.h  uniformbuffermanager.h
include/util/: bufferverificationhelper.h  containerutilities.h  factorytemplate.h  genericresource.h  getsetmacros.h  io.h  lightingverificationhelper.h  loopmacrodefines.h  managertemplate.h  mathutil.h  objectfactory.h  singleton.h  vulkanstructinitializer.h
source/: main.cpp
source/atomiccounter/: atomiccounter.cpp
source/buffer/: buffer.cpp  buffermanager.cpp
source/camera/: camera.cpp  cameramanager.cpp
source/core/: coremanager.cpp  eventsignalslot.cpp  gpupipeline.cpp  input.cpp  instance.cpp  logicaldevice.cpp  physicaldevice.cpp  surface.cpp  swapchain.cpp
source/framebuffer/: framebuffer.cpp  framebuffermanager.cpp
source/geometry/: bbox.cpp  triangle2d.cpp  triangle3d.cpp
source/material/: exposedstructfield.cpp  material.cpp  materialmanager.cpp
source/math/: transform.cpp
source/model/: model.cpp
source/node/: emitternode.cpp  node.cpp
source/parameter/: attributedefines.cpp
source/pipeline/: pipeline.cpp  pipelinedata.cpp
source/rastertechnique/: antialiasingtechnique.cpp  bufferprefixsumtechnique.cpp  bufferprocesstechnique.cpp  buildvoxelshadowmapgeometrytechnique.cpp  cameravisiblevoxeltechnique.cpp  clusterizationbuildfinalbuffertechnique.cpp  clusterizationcomputeaabbtechnique.cpp  clusterizationcomputeneighbourtechnique.cpp  clusterizationinitaabbtechnique.cpp  clusterizationmergeclustertechnique.cpp  clusterizationpreparetechnique.cpp  clusterizationtechnique.cpp  clustervisibilitytechnique.cpp  clustervisibleprefixsumtechnique.cpp  computefrustumcullingtechnique.cpp  distanceshadowmappingtechnique.cpp  lightbouncevoxelirradiancetechnique.cpp  litclustertechnique.cpp  rastertechnique.cpp  rastertechniquefactory.cpp  rastertechniquemanager.cpp  sceneindirectdrawtechnique.cpp  scenelightingtechnique.cpp  scenerastercolortexturetechnique.cpp  scenevoxelizationtechnique.cpp  shadowmappingvoxeltechnique.cpp  voxelfacepenaltytechnique.cpp  voxelrasterinscenariotechnique.cpp
source/renderpass/: renderpass.cpp  renderpassmanager.cpp
source/scene/: scene.cpp
source/shader/: atomiccounterunit.cpp  image.cpp  pushconstant.cpp  resourceenum.cpp  sampler.cpp  shader.cpp  shadermanager.cpp  shaderreflection.cpp  shaderstoragebuffer.cpp  shaderstruct.cpp  uniformBase.cpp
source/texture/: irradiancetexture.cpp  texture.cpp  textureinfo.cpp  texturemanager.cpp
source/uniformbuffer/: cpubuffer.cpp  uniformbuffer.cpp  uniformbuffermanager.cpp
source/util/: bufferverificationhelper.cpp  genericresource.cpp  io.cpp  lightingverificationhelper.cpp  mathutil.cpp  vulkanstructinitializer.cpp
